--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -87,7 +87,7 @@ body
 	nav
 		height 141px
 		ul
-			width 70%
+			//width 70%
 			padding 0
 			margin 0
 			list-style-type none
@@ -117,7 +117,7 @@ body
 			transform translateY(30px)
 .logo
 	display block
-	width 32.6%
+	//width 32.6%
 	display flex
 	justify-content flex-end
 	a
@@ -129,7 +129,6 @@ body
 			width auto
 			height 100%
 			position absolute
-			right 0
 			bottom -56px
 
 #marker
@@ -158,6 +157,8 @@ body
 // content side nav---
 .content-side-nav
 	width 25.5%
+	max-height 100%
+	overflow auto
 	li
 		&.indent
 			text-align center
@@ -333,25 +334,77 @@ body
 		a
 			color black
 // ---contact & career
-@media (min-width: 1437px)
+
+
+
+// ---------------------------------------------------------------------------------------
+
+
+@media (min-width: 1024px)
 	// utility---
-	.container
-		width 1437px
-		padding 0 50px
-	// ---utility
-@media (min-width: 1280px)
 	.container
 		padding-left 50px
 		padding-right 50px
-@media (min-width: 1080px)
-	.logo
-		width 20%
+	// ---utility
+		
+	// content---
+	.content-the-content
+		padding-left 60px
+		padding-right 0
+	// ---content
+	
+
+	// header---
 	#header
 		nav
 			ul
 				width 80%
-	
+	.logo
+		width 20%
+		img
+			left -180px
+			right unset
 
+	// ---header
+	
+				
+@media (min-width: 1280px)
+	// content---
+	.content-the-content
+		padding-left 198px
+		padding-right 198px
+	// ---content
+		
+	// header---
+	.logo
+		width 32.6%
+		//justify-content flex-start
+		img
+			right 0
+			left unset
+	#header
+		nav
+			ul
+				width 70%
+	// ---header
+
+@media (min-width: 1437px)
+	// utility---
+	.container
+		width 1437px
+	// ---utility
+		
+
+//----- Height
+@media (min-width: 1024px ) and (min-height: 650px)
+	.content
+		padding-top 200px
+	.fullpage-overflow
+		max-height 350px
+@media (min-width: 1024px ) and (min-height: 780px)
+	.content
+		padding-top 260px
+// ----- Height
 // mozilla---
 	.fullpage-overflow
 		overflow: -moz-scrollbars-none;
