sebelum ubah max width anjing

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -339,6 +339,62 @@ body
 
 // ---------------------------------------------------------------------------------------
 
+@media (min-width: 756px)
+	// utility---
+	.container
+		padding-left 50px
+		padding-right 50px
+	// ---utility
+		
+	// article---
+	.article-content-wrapper
+		p
+			font-size 30px
+			line-height 45px
+	// ---article
+
+	
+	// header---
+	#marker
+		display none
+	#header
+		nav
+			ul
+				width 80%
+				display none
+	.logo
+		justify-content flex-start
+
+	// ---header
+	
+	// content---
+	.content-the-content
+		padding 0 0 0 30px
+	.content
+		padding-top 200px
+	// ---content
+		
+	// home---
+	.home-text
+		padding 0
+		vertical-align middle
+		display table-cell
+	.content-home
+		display table
+		padding 0
+	// ---home
+	
+	// side-nav---
+	.content-side-nav-group
+		font-size 12px
+	.transformer
+		font-size inherit
+	.content-side-nav
+		max-height 438px
+			
+	// ---side-nav
+		
+
 
 @media (min-width: 1024px)
 	// utility---
@@ -346,6 +402,19 @@ body
 		padding-left 50px
 		padding-right 50px
 	// ---utility
+		
+	// header---
+	#marker
+		display block
+	#header
+		nav
+			ul
+				width 80%
+				display flex
+	.logo
+		justify-content flex-start
+
+	// ---header
 		
 	// content---
 	.content-the-content
