--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -45,7 +45,10 @@ body
 .container
 	margin-left auto
 	margin-right auto
-	padding 0 15px
+	padding 0 50px
+	@media (min-width: 1437px)
+		width 1437px
+		
 .garamond-i
 	font-family garamondI
 	
@@ -73,26 +76,31 @@ body
 // main---
 .main
 	background white
+	transition transform .50s ease, blur .50s ease
 // ---main
 
 
 
 // header---
+.mobile-nav
+	display none
 #header
 	width 100%
 	position fixed
 	top 0
 	left 0
 	z-index 10
+	transition transform .50s ease
 	nav
 		height 141px
 		ul
-			//width 70%
+			width 70%
 			padding 0
 			margin 0
 			list-style-type none
 			align-items flex-end
 			padding-left $gutter + $column px
+			transition transform .50s ease
 			li
 				position relative
 					
@@ -117,7 +125,7 @@ body
 			transform translateY(30px)
 .logo
 	display block
-	//width 32.6%
+	width 32.6%
 	display flex
 	justify-content flex-end
 	a
@@ -128,6 +136,7 @@ body
 		img
 			width auto
 			height 100%
+			right 0
 			position absolute
 			bottom -56px
 
@@ -263,8 +272,7 @@ body
 	max-height unset
 	overflow hidden
 	p
-		font-family : garamondR;
-		font-style : italic;
+		font-family : garamondI;
 		font-size : 42px;
 		line-height : 51.6px;
 		color : #000000;
@@ -335,146 +343,197 @@ body
 			color black
 // ---contact & career
 
+// marker-bottom----
+.marker-bottom
+	display none
+// ---marker-bottom
 
-
-// ---------------------------------------------------------------------------------------
-
-@media (min-width: 756px)
-	// utility---
-	.container
-		padding-left 50px
-		padding-right 50px
-	// ---utility
-		
-	// article---
-	.article-content-wrapper
-		p
-			font-size 30px
-			line-height 45px
-	// ---article
-
-	
-	// header---
-	#marker
-		display none
-	#header
-		nav
-			ul
-				width 80%
-				display none
-	.logo
-		justify-content flex-start
-
-	// ---header
-	
-	// content---
-	.content-the-content
-		padding 0 0 0 30px
-	.content
-		padding-top 200px
-	// ---content
-		
-	// home---
-	.home-text
-		padding 0
-		vertical-align middle
-		display table-cell
-	.content-home
-		display table
-		padding 0
-	// ---home
-	
-	// side-nav---
-	.content-side-nav-group
-		font-size 12px
-	.transformer
-		font-size inherit
-	.content-side-nav
-		max-height 438px
-			
-	// ---side-nav
-		
-
-
-@media (min-width: 1024px)
-	// utility---
-	.container
-		padding-left 50px
-		padding-right 50px
-	// ---utility
-		
-	// header---
-	#marker
-		display block
-	#header
-		nav
-			ul
-				width 80%
-				display flex
-	.logo
-		justify-content flex-start
-
-	// ---header
-		
-	// content---
-	.content-the-content
-		padding-left 60px
-		padding-right 0
-	// ---content
-	
-
-	// header---
-	#header
-		nav
-			ul
-				width 80%
-	.logo
-		width 20%
-		img
-			left -180px
-			right unset
-
-	// ---header
-	
-				
-@media (min-width: 1280px)
+// ---------------------------------------------------------------------------------------		
+@media (max-width: 1437px)
 	// content---
 	.content-the-content
 		padding-left 198px
 		padding-right 198px
 	// ---content
-		
+	
+	// article---
+	.article-content-wrapper
+		p
+			font-size 32px
+	// ---article
+
+@media (max-width: 1280px)
+	// article---
+	.article-content
+		width 74.5%
+		padding-right 0
+	// ---article
+	
+	// content---
+	.content-the-content
+		padding 0 60px
+	// ---content
+	
 	// header---
 	.logo
-		width 32.6%
-		//justify-content flex-start
-		img
-			right 0
-			left unset
+		width 20%
+		a
+			height 78px
 	#header
 		nav
 			ul
-				width 70%
+				width 80%
 	// ---header
-
-@media (min-width: 1437px)
-	// utility---
+	
+	.content-home
+		display table
+		padding 0
+	.home-text
+		display table-cell
+		vertical-align middle
+		padding 0
+@media (max-width: 1024px)
+	#header
+		nav
+			ul.header-ul
+				padding 50px
+				display block	
+				position: fixed;
+				right: -400px
+				width 300px
+				flex-direction: column;
+				align-items: left;
+				height 100vh
+				background white
+				.header-link.active,.header-link:hover
+					span
+						transform translateY(0)
+						text-decoration underline
+	.logo
+		justify-content space-between
+		> a
+			display block
+			img
+				position relative
+				bottom -40px
+	.mobile-nav
+		display flex
+		flex-direction column
+		justify-content center
+	.hamburger
+		height 20px
+		width 30px
+		position relative
+		&:hover
+			cursor pointer
+		span
+			position absolute
+			height 2px
+			background black
+			width 100%
+			left 0
+			transition all .25s ease
+			&:first-child
+				top 0
+			&:nth-child(2)
+				top 50%
+				transform translateY(-50%)
+			&:last-child
+				bottom 0
+		&.active
+			span:first-child
+				top 10px
+				transform rotate(45deg)
+			span:nth-child(2)
+				opacity 0
+			span:last-child
+				top 10px
+				transform: rotate(-45deg) 
+	.content
+		padding-top 200px
+	.content-side-nav
+		max-height 438px
+	.content-home
+		padding-top 100px
+	.article-content-wrapper
+		p
+			line-height 35px
+	.marker-bottom
+		display block
+		position fixed
+		bottom 0
+		width 100%
+		height 1px
+		span
+			display block
+			background black
+			width 0%
+			height 100%
+			transition width .25s ease
+@media (max-width: 756px)
+	.content-side-nav
+		display none
 	.container
-		width 1437px
-	// ---utility
-		
+		padding 0 25px
+	.logo 
+		> a 
+			height 50px
+			img
+				bottom -30px
+	#header
+		nav
+			height 100px
+	.home-text
+		font-size 30px
+		line-height unset
+	.content-the-content
+		padding 0
+	.content
+		padding-top 130px
+	.article-content-wrapper
+		p
+			text-align left
+			font-size 18px
+			line-height 30px
+	.content-overflow-inside
+		p
+			font-size 18px
+	.content-download-link
+		margin-top 20px
+	.content-overflow-inside
+	.content-home
+		padding-top 0
+	.partners-img
+		width 75px
+	.partners-name
+		font-size 22px
+	.content-partners
+		margin-bottom 20px
+	.content-overflow-inside
+		max-height 300px
+	.content-partners-article
+		max-height 200px
+	.contact-content
+		overflow none
+		max-height unset
+	.contact-content
+		p
+			line-height 30px
+	.content-footer
+		flex-direction column
+	#marker
+		display none
 
 //----- Height
-@media (min-width: 1024px ) and (min-height: 650px)
+@media (min-width: 1024px ) and (max-height: 650px)
 	.content
 		padding-top 200px
 	.fullpage-overflow
 		max-height 350px
-@media (min-width: 1024px ) and (min-height: 780px)
-	.content
-		padding-top 260px
 // ----- Height
-// mozilla---
+
+@-moz-document url-prefix()
 	.fullpage-overflow
 		overflow: -moz-scrollbars-none;
-// ---mozilla
+	.content-side-nav
+		overflow: -moz-scrollbars-none;
