--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -537,6 +537,12 @@ body
 		padding-top 0
 	.content-footer
 		margin-top 50px
+
+@media (max-width: 576px) and (max-height: 520px)
+	.content-overflow-inside
+		max-height 250px
+	.partners-img
+		display none
 	
 //----- Height
 @media (min-width: 1024px ) and (max-height: 650px)
