fixed bug side nav when click wont scroll shitty fucks

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -512,6 +512,7 @@ button
 			background-size: contain
 			background-position: center
 	.content-side-nav
+		overflow unset
 		display flex
 		flex-wrap wrap
 		position absolute
