added scroll false if sidenav open and vice versa

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -376,14 +376,15 @@ button
 		&:first-child
 			margin-top 0
 	p
-		font-family : garamondR
-		font-size : 20px;
-		line-height : 29px;
-		letter-spacing : 0.5px;
-		color : #000000;
-		font-weight normal
-		&:last-child
-			margin-bottom 20px
+		p
+			font-family : garamondR
+			font-size : 20px;
+			line-height : 29px;
+			letter-spacing : 0.5px;
+			color : #000000;
+			font-weight normal
+			&:last-child
+				margin-bottom 20px
 // ---contact & career
 
 // marker-bottom----
